August_30/August_30/src/objects/Devops_image__c.object
<CustomObject>
    <fields>
        <fullName>Alternative_Text__c</fullName>
        <label>Alternative Text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Header_Description__c</fullName>
        <label>Header Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Href__c</fullName>
        <label>Href</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <label>Devops image</label>
    <nameField>
        <label>Devops image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Devops images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>